monticore-generator/src/test/resources/cocos/invalid/A0277/A0277.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A0277;

grammar A0277 {

  abstract A;

}
